Fix flickers

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,6 @@
   opacity: 0.3;
 }
 
-.engines img:hover {
+.engines img.enginesActive:hover {
   opacity: 1;
 }
